--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "author": "Your Name <your.email@example.com>",
   "license": "MIT",
-  "dependencies": {
-    "electron": "^latest"
-  }
+ "devDependencies": {
+  "electron": ">=22.3.25"
+}
 }
